--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gulp-imagemin": "^9.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
     "sass": "^1.77.8"
   },
   "dependencies": {
